Add Lottie animations and update project details
- Introduced `@lottiefiles/dotlottie-react` dependency for Lottie animations.
- Added new project images for the e-commerce website project.
- Created a new project description in MDX format.
- Updated header component to display local time with a label.
- Refactored homepage to include the Hero component with Lottie animation.
- Adjusted configuration and content for improved clarity and accuracy.

--- a/src/app/[locale]/work/projects/en/e-commerce-website-for-postpartum-care-company.mdx
+++ b/src/app/[locale]/work/projects/en/e-commerce-website-for-postpartum-care-company.mdx
@@ -1,21 +1,17 @@
 ---
-title: "Building an adaptive design system for Archlight"
+title: "Building an e-commerce website for a Postpartum Care based company"
 publishedAt: "2024-04-08"
 summary: "In this project, I developed a flexible and scalable design system using Next.js for front-end development and Figma for design collaboration."
 images:
-  - "/images/projects/project-01/cover-01.jpg"
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/cover-03.jpg"
-  - "/images/projects/project-01/cover-04.jpg"
+  - "/images/projects/project-01/elle-01.png"
+  - "/images/projects/project-01/elle-02.png"
+  - "/images/projects/project-01/elle-03.png"
+  - "/images/projects/project-01/elle-04.png"
 team:
-  - name: "Selene Yu"
+  - name: "Victor Agbeleye"
     role: "Software Engineer"
-    avatar: "/images/avatar.jpg"
+    avatar: "/images/victor.png"
     linkedIn: "https://www.linkedin.com/company/once-ui/"
-  - name: "Jane Smith"
-    role: "Product Manager"
-    avatar: "/images/projects/project-01/avatar-01.png"
-    linkedIn: "https://www.linkedin.com/in/janesmith"
 ---
 
 ## Overview
